Update video title with link to Ai Chatboat
Added a link to 'Ai Chatboat' in the video title.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="play_list">
       <div class="list">
         <video onclick="location.href='index.html'" src="video.mp4"></video>
-        <h2>Universe.mp4</h2>
+        <h2>Universe.mp4<a href="index 10.html">Ai Chatboat</a></h2>
       </div>
       <div class="list">
         <video onclick="location.href='index.html'" src="video.mp4"></video>
