--- a/index 10.html
+++ b/index 10.html
@@ -12,8 +12,8 @@
   padding: 0;
 }
 body, html {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   font-family: 'Segoe UI', sans-serif;
   overflow: hidden;
 }/* Gradient background */
