--- a/index 10.html
+++ b/index 10.html
@@ -25,7 +25,7 @@ body, html {
   .chat-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 92vh;
     width: 100vw;
     backdrop-filter: blur(15px);
   } .chat-messages {
@@ -37,7 +37,7 @@ body, html {
     gap: 10px;
   }
   .message {
-    max-width: 70%;
+    max-width: 70vw;
     padding: 12px 16px;
     border-radius: 16px;
     position: relative;
@@ -45,11 +45,75 @@ body, html {
   }
   .message.user{
     align-self: flex-end;
-    background: linear-gradient(120deg, #6dd5ed, #2193b0); color: white; } .message.bot { align-self: flex-start; background: rgba(0,0,0,0.5); color: #f0f0f0; } .message.typing { align-self: flex-start; background: rgba(0,0,0,0.4); font-style: italic; }
-
-/* Typing dots */ .typing-dots { display: flex; gap: 4px; } .typing-dots span { display: inline-block; width: 6px; height: 6px; background: #fff; border-radius: 50%; animation: bounce 1s infinite; } .typing-dots span:nth-child(2) { animation-delay: 0.2s; } .typing-dots span:nth-child(3) { animation-delay: 0.4s; } @keyframes bounce { 0%, 80%, 100% { transform: scale(0); } 40% { transform: scale(1); } }
-
-/* Input bar */ .chat-input-bar { padding: 12px 20px; display: flex; gap: 10px; background: rgba(255,255,255,0.15); backdrop-filter: blur(15px); border-top: 1px solid rgba(255,255,255,0.2); } .chat-input-bar input { flex: 1; padding: 12px 16px; border-radius: 999px; border: none; outline: none; background: rgba(255,255,255,0.2); color: #fff; } .chat-input-bar input::placeholder { color: rgba(255,255,255,0.7); } .chat-input-bar button { padding: 12px 20px; border: none; border-radius: 999px; background: linear-gradient(120deg, #6dd5ed, #2193b0); color: #fff; cursor: pointer; transition: 0.3s; } .chat-input-bar button:hover { background: linear-gradient(120deg, #2193b0, #6dd5ed); } </style>
+    background: linear-gradient(120deg, #6dd5ed, #2193b0);
+    color: white;
+  }
+  .message.bot{
+    align-self: flex-start;
+    background: rgba(0,0,0,0.5);
+    color: #f0f0f0;
+  }
+  .message.typing {
+    align-self: flex-start;
+    background: rgba(0,0,0,0.4); 
+    font-style: italic;
+  }
+  .typing-dots{
+    display: flex;
+    gap: 4px;
+  }
+  .typing-dots span {
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    background: #fff;
+    border-radius: 50%;
+    animation: bounce 1s infinite;
+  }
+  .typing-dots span:nth-child(2){
+    animation-delay: 0.2s;
+  }
+  .typing-dots span:nth-child(3){
+    animation-delay: 0.4s;
+  }
+  @keyframes bounce {
+    0%, 80%, 100% { transform: scale(0); }
+    40% { transform: scale(1); }
+  }
+  .chat-input-bar {
+    height: 8vh;
+    padding: 12px 20px;
+    display: flex;
+    gap: 10px;
+    background: rgba(255,255,255,0.15);
+    backdrop-filter: blur(15px);
+    border-top: 1px solid rgba(255,255,255,0.2);
+  }
+  .chat-input-bar input {
+    flex: 1;
+    padding: 12px 16px;
+    border-radius: 999px;
+    border: none;
+    outline: none;
+    background: rgba(255,255,255,0.2);
+    color: #fff;
+  }
+  .chat-input-bar input::placeholder {
+    color: rgba(255,255,255,0.7);
+  }
+  .chat-input-bar button {
+    padding: 12px 20px;
+    border: none;
+    border-radius: 999px;
+    background: linear-gradient(120deg, #6dd5ed, #2193b0);
+    color: #fff;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  .chat-input-bar button:hover{
+    background: linear-gradient(120deg, #2193b0, #6dd5ed);
+  }
+  </style>
 
 </head>
 <body>
